syntax = "proto3";

package pb;

option go_package = "grpc/pb";

message StartGameRequest {
    uint32 turn_duration = 1;
    uint32 discussion_duration = 2;
    repeated uint32 role_ids = 3;
    repeated uint32 required_role_ids = 4;
    uint32 number_of_werewolves = 5;
    repeated string player_ids = 6;
}

message StartGameResponse {
    string game_id = 1;
    uint32 started_at = 2;
    uint32 preparation_duration = 3;
}
